WEB-9620 fixes overlay z-index, applies overlay only to the main menu nav, fixes the mobile experience

--- a/scss/partials/_menu.scss
+++ b/scss/partials/_menu.scss
@@ -491,5 +491,6 @@
 
   @include breakpoint(desktop) {
     top: 10.4rem; // accounts for navbar height
+    z-index: 20;
   }
 }
